2011-02-15: d100.js,d100.html,d100.atom
	* datajs を使って OData のサンプル。

2011-02-14: http-server.py
	* テスト用の静的コンテンツ配信 HTTP サーバ。

2011-02-07: d99.py
	* Selenium を使ってユニットテストとスクリーンキャプチャ。

2011-02-03: d98.hs
	* Haskell で Hello world 。

2011-02-01: d97.py
	* BeautifulSoup を使って HTML をパースする。

2011-01-26: d96.sh
	* .pyc ファイルを掃除する。

2011-01-20: d95.py,d95.0.html,d95.1.html,d95.2.html
	* jinja2 の extends を使ってみる。

2011-01-09: d94.py,d94.0.txt,d94.1.txt [facebook hackers cup]
	* Peg Game を表示する。

2011-01-09: d93.py [facebook hackers cup]
	* Double Square を解く。

2011-01-07: d92.py [project]
	* virtualenv+buildout で開発環境を構築する。

2011-01-07: d91.sh
	* SVN のコミット数をユーザーごとに集計する。

2010-12-24: d90.py,d90.tpl
	* reST を HTML に変換するときに自前のテンプレートを使う。

2010-12-23: d89.py
	* Twitter の search API を使ってみる。

2010-12-22: d88.sh
	* MySQL-5.5 系をソースからビルドする。

2010-12-21: d87.sh
	* Python に付属する HTTP サーバモジュールを実行する。

2010-12-12: d86.sh
	* HTML をダウンロードしたときの画像ファイルをコピーする。

2010-12-10: d85.sh
	* pep8 と nosetests を bash でまとめて実行させる。

2010-12-06: d84.py
	* Twitter の user_timeline から JSON を取得する。

2010-12-06: d83.py
	* Python で Selenium を操作してみる。

2010-12-05: d82.py
	* `pymongo` で MongoDB に接続してみる。

2010-11-28: d81.py
	* `twisted.web.html` を使ってみる。

2010-11-25: d80.py
	* Twisted で WSGI アプリケーションを動かす。

2010-11-16: d79.html,d79.js
	* jQuery でアンカータグを扱う。

2010-11-15: d78.c
	* C 言語で cURL を使ってみる。

2010-11-14: d77.sh
	* 指定したディレクトリ配下にある大きなファイルを10個まで表示する。

2010-11-11: d76.py
	* Wikipedia のダンプデータ (abstract) を処理する。

2010-11-06: d75.sh
	* 壊れているシンボリックリンクを削除する。

2010-10-25: d74.py [project]
	* Adobe AIR SDK のプロジェクトを生成する。

2010-10-23: d73.py,d73.html,d73.txt
	* `jinja2` で if 文と for 文を使ってみる。

2010-10-16: d72.py,d72.json
	* `MySQLdb` の接続情報を JSON から取得する。 (see d61.py)

2010-10-15: d71.html
	* JavaScript でタイトルをクリックすると本文が開閉する処理を実装してみる。

2010-10-14: d70.py
	* use `nose` for simple test.

2010-10-11: d69.c
	* ソケット通信用のクライアントを実装してみる。

2010-10-09: d68.c
	* スレッドに join しないことでメモリリークを発生させる。
		use pthread and raise memory leak not to call `pthread_join`
