@@ -1,0 +1,33 @@
+<!DOCTYPE HTML>
+<html lang="ja"><head>
+<meta charset="utf-8">
+<title>jQuery Date Picker</title>
+<link type="text/css" href="/css/smoothness/jquery-ui-1.8.9.custom.css" rel="Stylesheet" />
+<style>
+input[type=text] { padding: 3px; }
+header { border-bottom: solid 1px gray; }
+footer { border-top: solid 1px gray; }
+#contents li { margin: 5px; }
+#contents li:nth-child(even) { background-color: #CFFFFF; }
+</style>
+</head><body>
+<div id="container">
+<header>
+Date Picker
+</header>
+<div id="main">
+<form method="get" action="#">
+<input type="text" name="date" size="20" class="date" placeholder="your favorite date" />
+<input type="submit" value="Save" />
+</form>
+<ul id="contents"></ul>
+</div>
+<footer>
+</footer>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+<script>!window.jQuery && document.write('<script src="/static/jquery.min.js"><\/script>')</script>
+<script type="text/javascript" src="/static/jquery-ui.min.js"></script>
+<script type="text/javascript" src="d101.js"></script>
+<!-- vim: set noet sw=2 ts=2 fileencoding=utf-8 : -->
+</body></html>
