@@ -1,3 +1,6 @@
+2011-02-16: d101.js,d101.html
+	* jQueryUI の DatePicker のサンプル。
+
 2011-02-15: d100.js,d100.html,d100.atom
 	* datajs を使って OData のサンプル。
 
